Patch for bug 239785: "only first part blinks for elements split into multiple lines" Contributed by Michal Ceresna <ceresna@amos.sturak.sk> r=caillon, sr=roc