extensions/inspector/base/src/inFlasher.h
@@ -63,7 +63,8 @@ public:
 
 protected:
   void DrawOutline(nscoord aX, nscoord aY, nscoord aWidth, nscoord aHeight,
-                   float aP2T, nsIRenderingContext* aRenderContext);
+                   float aP2T, nsIRenderingContext* aRenderContext,
+                   PRBool aDrawBegin, PRBool aDrawEnd);
   void DrawLine(nscoord aX, nscoord aY, nscoord aLength,
                 PRBool aDir, PRBool aBounds, float aP2T,
                 nsIRenderingContext* aRenderContext);
